--- a/.eslintrc
+++ b/.eslintrc
@@ -41,7 +41,8 @@
         "react/jsx-filename-extension": 0,
         "react/jsx-curly-spacing": [ 2, "always" ],
         "react/jsx-indent": [ 2, 4 ],
-        "react/prop-types": 2,
+        "react/jsx-indent-props": [ 2, 4 ],
+        "react/prop-types": 0,
 
         // windows vs linx
         "linebreak-style": 0
