--- a/assets/code/restAndSpread.example
+++ b/assets/code/restAndSpread.example
@@ -10,7 +10,7 @@ function add( a, b, c ) {
 
 add( 1, 2, 3 ); // 6
 
-function add( a, b, c ) {
+function add( ) {
     var args = [ ].slice.call( arguments );
     return args.reduce( function( a, b ) {
         return a + b;
@@ -21,19 +21,21 @@ add( 1, 2, 3, 4, 5 ); // 15
 
 /* ES 2015 */
 
-const add = ( ...args ) => args.reduce( ( a, b ) => a + b );
+const add = ( ...args ) => 
+    args.reduce( ( a, b ) => a + b );
 
 add( 1, 2, 3, 4, 5 ); // 15
 
 
-const addTo = ( initialValue, ...args ) => initialValue + add( ...args );
-
-addTo( 10, 1, 2, 3, 4, 5 ); // 25
-
-
 const array = [ 1, 2, 3, 4, 5 ];
 
-add( ...array );
+add( ...array ); // 15
+
+
+const addTo = ( initialValue, ...args ) => 
+    initialValue + add( ...args );
+
+addTo( 10, 1, 2, 3, 4, 5 ); // 25
 
 
 const [ first, ...rest ] = [ 1, 2, 3, 4, 5 ];
@@ -52,3 +54,5 @@ const person = {
 const email = "ninja@javascript.com";
 
 const personWithEmail = { ...person, email };
+
+
